maze.wallfindfollow.WallFindFollowMaze.scala.error
Compilation error:
WallFindFollowMaze:8: error: not found: value keepHandOnSide
    keepHandOnSide()
    ^