maze.wallfindfollow.WallFindFollowMaze.scala.code
override def run() {
  gauche()
  while(!estFaceMur()){
    avance()
  }
  droite()
  while(!estSurBiscuit){
    keepHandOnSide()
    
    
  }
  prendBiscuit()
  
}
def keepHandOnSideWall(){
  gauche()
  if(estFaceMur){
      droite()
      if(!estFaceMur){
      avance()
      }else{
        droite()
      }
    }else{
      avance()
    }
}